clang/clang7.0/error-files/error0002.txt
In file included from arch/x86/kvm/emulate.c:24:
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
        asm("push %[flags]; popf; " CALL_NOSPEC " ; pushf; pop %[flags]\n"
            ^
arch/x86/kvm/emulate.c:1025:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$1662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${1:V}6651:	.popsection'
        asm("push %[flags]; popf; " CALL_NOSPEC
            ^
arch/x86/kvm/emulate.c:1025:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$1662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${1:V}6651:	.popsection'
arch/x86/kvm/emulate.c:1025:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$1662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${1:V}6651:	.popsection'
arch/x86/kvm/emulate.c:1025:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$1662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${1:V}6651:	.popsection'
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
        asm("push %[flags]; popf; " CALL_NOSPEC " ; pushf; pop %[flags]\n"
            ^
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
arch/x86/kvm/emulate.c:1025:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$1662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${1:V}6651:	.popsection'
        asm("push %[flags]; popf; " CALL_NOSPEC
            ^
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
        asm("push %[flags]; popf; " CALL_NOSPEC " ; pushf; pop %[flags]\n"
            ^
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
arch/x86/kvm/emulate.c:5387:6: error: invalid operand in inline asm: 'push $2; popf; 999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$3662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${3:V}6651:	.popsection ; pushf; pop $2'
2 warnings and 13 errors generated.
make[2]: *** [scripts/Makefile.build:325: arch/x86/kvm/emulate.o] Error 1
make[1]: *** [scripts/Makefile.build:583: arch/x86/kvm] Error 2
make: *** [Makefile:1060: arch/x86] Error 2
